<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_name" />

            <EditText
                android:id="@+id/register_name_text"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_gender" />

            <RadioGroup
                android:id="@+id/register_gender_text"
                android:gravity="start"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/register_gender_male" />

                <RadioButton
                    android:id="@+id/register_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/register_gender_female" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_phonenumber" />

            <EditText
                android:id="@+id/register_phonenumber_text"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:inputType="textPhonetic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_email" />

            <EditText
                android:id="@+id/register_email_text"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_region" />

            <EditText
                android:id="@+id/register_region_text"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register_address" />

            <EditText
                android:id="@+id/register_address_text"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="text"
                android:text=""/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_register" />

    </LinearLayout>

</LinearLayout>
